[package]
name = "polkadot-primitives-test-helpers"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
sp-keyring = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.36" }
sp-application-crypto = { package = "sp-application-crypto", git = "https://github.com/CESSProject/substrate", default-features = false , branch = "cess-polkadot-v0.9.36" }
sp-runtime = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.36" }
sp-core = { git = "https://github.com/CESSProject/substrate", features = ["std"] , branch = "cess-polkadot-v0.9.36" }
polkadot-primitives = { path = "../" }
rand = "0.8.5"
